[package]
name = "tlbf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust = "1.65.0"

readme = "README.md"
repository = "https://github.com/mintlu8/strflags"
description = """
A string-enum and string-flags with fixed variants that can also accept arbitrary data.
"""
keywords = ["string", "set", "enum", "flags"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghost = "^0.1.16"
