[package]
name = "tlbf"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust = "1.65.0"

readme = "README.md"
repository = "https://github.com/mintlu8/tlbf"
description = """
Type level bitflags.
"""
keywords = ["bitflags", "set", "enum", "flags"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghost = "^0.1.16"
